[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiosqlite-strict"
version = "1.0.3"
description = "aiosqlite + strict pydantic models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.0",
    "pydantic>=2.12.5",
]
license = {file = "LICENSE"}

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.3.0",
]

[tool.setuptools]
py-modules = ["aiosqlite_strict"]

[tool.pytest.ini_options]
testpaths = ["tests"]
